Part way through step one lab5
